@@ -137,6 +137,9 @@
      successful authentication (the drafts requirement).
      serverloop/clientloop now send a 'UNIMPLEMENTED' message instead 
      of exiting.
+   - markus@cvs.openbsd.org 2002/01/11 20:14:11
+     [auth2-chall.c auth-skey.c]
+     use strlcpy not strlcat; mouring@
 
 
 20020121
@@ -7285,4 +7288,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1761 2002/01/22 12:24:13 djm Exp $
+$Id: ChangeLog,v 1.1762 2002/01/22 12:24:33 djm Exp $
